# dubplate

./: .gitignore  CMakeLists.txt  LICENSE  README.md  startdubplate
src/: CMakeLists.txt  FBvsb.c  FBvsb.h  dsptop.c  mtseq.c  mtseq.h  tcanalysis.c  turntable.c  vsb.c  vsb.h  wavseq.c  wavseq.h
touchosc/: dubplate.tosc
